@@ -179,6 +179,7 @@ issues you find at
   
 <h2><a name="list.issues">6. List of JIRA Issues Fixed in this Release</a></h2>
 
+
         Release Notes - UIMA - Version 2.3
         
 <h2>        Bug
@@ -428,6 +429,12 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1664'>UIMA-1664</a>] -         Windows command line files not working
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1668'>UIMA-1668</a>] -         Update sample descriptor for cas editor test UI_009
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1678'>UIMA-1678</a>] -         Pear builder maven plugin should use &quot;Package&quot; mode of buildComponentClassPath 
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1679'>UIMA-1679</a>] -         UIMA scripts set memory options that override user's setiings
+</li>
 </ul>
     
 <h2>        Improvement
@@ -657,5 +664,6 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1389'>UIMA-1389</a>] -         Remove OpenNLP example wrapper
 </li>
 </ul>
+    
 </body>
 </html>
